21/4/13
  Fix for firefox menus disappearing when moving entries

13/4/13
  Fix for the window colours not updating when updating config.

23/3/13
  Added marker in desktop switcher for previous desktop

22/3/13
  Check number of windows before doing anything else in prev_win

18/3/13
  Updated Makefile

11/3/13
  Don't decrement nmaster when client is removed

4/3/13
  Check for a window manager already running
  Option to set the initial number of extra windows in the master area for
   each desktop in rc.conf

2/3/12
  Enable multimedia keys by default
  Add NULL for using no modifier key
  Don't change mode with windows open on update
  Remove desktop showing/flicker in fullscreen mode when changing
   desktops

25/2/13
  In fullscreen mode map new/next/prev window before unmapping current

9/2/12
  Remove input focus from current window when changing monitors
  Add option to automatically switch from stacking mode when
   opening a window with more than a set number of windows open

5/2/13
  Overlap master/stack borders in vertical & horizontal tiling modes
  With multiple monitors when click to focus window on unfocused
   screen warp cursor

27/1/13
  Fix for booting into horizontal mode failing to map windows
   correctly

16/1/13
  Fix for multi monitor pointer warping when clicking on the bar
  Fix for bar not updating in multi monitor mode when switching
   mode on monitor without bar

14/12/12
  update_current() after destroynotify()

6/12/12
  Don't warp the pointer when clicking an unfocused
   window on an unfocused monitor

5/12/12
  Fix for window mapping with multiple monitors

4/12/12
  Added option in rc.conf to center windows or not
   in stacking mode # for gimp windows etc

1/12/12
  Fix for window size with toggle_bar()
  Fix for fullscreen window unmapping when window
   opens on a different desktop
  Fix for window mapping when using update_config
   and mode changes from fullscreen

30/11/12
  Added Control to keyboard shortcuts mods
